fix datepicker start_date too long

--- a/components/dash-core-components/src/components/css/datepickers.css
+++ b/components/dash-core-components/src/components/css/datepickers.css
@@ -32,11 +32,11 @@
 }
 
 .dash-datepicker-input-wrapper:has(> :nth-child(4)) {
-    grid-template-columns: 1fr auto 1fr auto;
+    grid-template-columns: auto auto 1fr auto;
 }
 
 .dash-datepicker-input-wrapper:has(> :nth-child(5)) {
-    grid-template-columns: 1fr auto 1fr auto auto;
+    grid-template-columns: auto auto 1fr auto auto;
 }
 
 .dash-datepicker-input-wrapper,
